# total-recall

./: .env.example  .gitignore  APRENDIZADOS.md  CLAUDE.md  LICENSE  README.md  SESSAO-PLANEJAMENTO-MEMORIA-VIVA-2026-03-22.md
projetos/memoria-viva/: .env.example  .gitignore  APRENDIZADOS.md  CLAUDE.md  INSTALL.md  README.md  ROADMAP.md  pyproject.toml
projetos/memoria-viva/cold_store/: BRAND_MEMORY.md  MEMORY.md  PM_CONTEXT.md
projetos/memoria-viva/docs/: ADRs.md  ARQUITETURA.md  GLOSSARIO.md  PRD.md
projetos/total-recall-codex/: .env.example  APRENDIZADOS.md  CLAUDE.md  README.md  pyproject.toml
projetos/total-recall-codex/.local-bin/: total-recall-codex
projetos/total-recall-codex/docs/: BENCHMARK.md
projetos/total-recall-codex/skill/: SKILL.md
projetos/vozes-da-comunidade/: .env.example  .gitignore  APRENDIZADOS.md  CLAUDE.md  README.md  ROADMAP.md  pyproject.toml  requirements-plano-a.txt  requirements-plano-b.txt  status-atual-em-2026-03-23.md
projetos/vozes-da-comunidade/data/: gate_benchmark_corpus_v1.json  teste_50_comentarios.json  teste_estagio1.json
projetos/vozes-da-comunidade/docs/: ADRs.md  ARQUITETURA.md  AVALIACAO_GANHO_NEGOCIO_EMBELLEZE_GATE_ABSA_2026-03-27.md  CHECKLIST_BRANCH_A_FULL_RUN_SABIAZINHO_2026-03-27.md  DECISIONS.md  DIAGNOSTICO_RUN_CORPUS_2026-03-27.md  ESTADO_ATUAL-vozes-da-comunidade-apos-crash-claude-27-marco-2026.md  FINE_TUNING_CICLO.md  HANDOFF_OPUS_LACUNAS_EVIDENCIAS_CORPUS_COMPLETO_2026-03-27.md  HANDOFF_TO_CODEX.md  LEMBRETE_ESTADO_ATUAL_ASTE_ABSA_2026-03-27.md  NEXT_STEPS.md  PESQUISA_ARQUITETURA_GATE_ABSA_2026-03-27.md  PLANO_A_BERTIMBAU.md  PLANO_B_SLM.md  PRD.md  PROMPT_CLAUDE_OPUS_BRANCH_A_SANEAMENTO_PIPELINE_E_FULL_RUN_SABIAZINHO_2026-03-27.md  Para retomar depois, o jeito mais simples é você.txt  RELATORIO_BENCHMARK_SESSAO_2026-03-27.md  RELATORIO_TESTE_ESTAGIO1.md  SPEC_BRANCH_A_SANEAMENTO_PIPELINE_E_FULL_RUN_SABIAZINHO_2026-03-27.md  (+5 more)
(+94 files in other folders)
