[project]
name = "total-recall-codex"
version = "0.1.0"
description = "Memória pesquisável para sessões do Codex — indexa todos os transcripts JSONL"
requires-python = ">=3.9"
dependencies = [
    "sqlite-vec>=0.1.6",
    "ollama>=0.4.0",
    "click>=8.1.0",
    "rapidfuzz>=3.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
dev = ["pytest>=8.0.0"]

[project.scripts]
total-recall-codex = "total_recall_codex.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
