[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vozes-da-comunidade"
version = "0.1.0"
description = "Inteligência de consumidora (TikTok ASTE) para briefings Novex/Embelleze"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.30.0",
    "typer>=0.12.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
vozes = "vozes_da_comunidade.cli:app"

[tool.setuptools.packages.find]
where = ["src"]
